# data_analytics

./: .gitignore  .nojekyll  _quarto.yml  about.html  applied.html  applied.qmd  applied_lab1.html  applied_lab1.qmd  applied_lab2.html  applied_lab2.qmd  applied_lab3.html  applied_lab3.qmd  applied_lab4.html  applied_lab4.qmd  applied_lab5.html  applied_lab5.qmd  applied_lab6.html  applied_lab6.qmd  applied_lec1-speaker.html  applied_lec1.html  applied_lec1.qmd  applied_lec2-speaker.html  applied_lec2.html  applied_lec2.qmd  applied_lec3-speaker.html  applied_lec3.html  applied_lec3.qmd  applied_lec4-speaker.html  applied_lec4.html  applied_lec4.qmd  applied_lec5-speaker.html  applied_lec5.html  applied_lec5.qmd  applied_lec6-speaker.html  applied_lec6.html  applied_lec6.qmd  applied_lec7.html  applied_lec7.qmd  bigdata.html  bigdata.qmd  (+59 more)
nb/: bigdata_lab2.html
nb/lab1/: Lab1.html
nb/lab10/: lab10.html  lab10_scratchpad.html
nb/lab11/: lab11.html
nb/lab12/: Lab12.html  Untitled.html
nb/lab13/: Lab13.html
nb/lab14/: Lab14.html
nb/lab16/: Lab16.html
nb/lab16/notebooks/: Untitled.html
nb/lab2/: lab2.html
nb/lab3/: lab3.html
nb/lab4/: 00_overview.html  01_dataframe.html
nb/lab5/: 02_array.html
nb/lab6/: 03_dask.delayed.html  05_futures.html
nb/lab8/: Lab8.html
nb/lab9/: eog.html  lab9.html  test_coarsen.html
