[project]
name = "data-analytics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cython>=3.1.4",
    "jupyter>=1.1.1",
    "jupyter-cache>=1.0.1",
    "numba>=0.62.0",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "toolz>=1.0.0",
]
