[project]
name = "data-analytics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "branca>=0.8.2",
    "cython>=3.1.4",
    "dask[complete]>=2025.9.1",
    "folium>=0.20.0",
    "geopandas>=1.1.1",
    "geopy>=2.4.1",
    "jupyter>=1.1.1",
    "jupyter-cache>=1.0.1",
    "mapclassify>=2.10.0",
    "matplotlib>=3.10.6",
    "memory-profiler>=0.61.0",
    "numba>=0.62.0",
    "numpy>=2.3.3",
    "pandas>=2.3.2",
    "pyarrow>=21.0.0",
    "rasterio>=1.4.3",
    "rasterstats>=0.20.0",
    "s3fs>=2025.9.0",
    "shapely>=2.1.2",
    "toolz>=1.0.0",
    "zarr>=3.1.3",
]
